[build-system]
requires = ["setuptools>=60"]
build-backend = "setuptools.build_meta"

[project]
name = "datajoint"
# dynamically set in tools.setuptools.dynamic
dynamic = ["version"]
dependencies = [
  "numpy",
  "pymysql>=0.7.2",
  "deepdiff",
  "pyparsing",
  "ipython",
  "pandas",
  "tqdm",
  "networkx",
  "pydot",
  "minio>=7.0.0",
  "matplotlib",
  "faker",
  "urllib3",
  "setuptools",
]
requires-python = ">=3.9,<3.14"
authors = [
  {name = "Dimitri Yatsenko", email = "dimitri@datajoint.com"},
  {name = "Thinh Nguyen", email = "thinh@datajoint.com"},
  {name = "Raphael Guzman"},
  {name = "Edgar Walker"},
  {name = "DataJoint Contributors", email = "support@datajoint.com"},
]
maintainers = [
  {name = "Dimitri Yatsenko", email = "dimitri@datajoint.com"},
  {name = "DataJoint Contributors", email = "support@datajoint.com"},
]
# manually sync here: https://docs.datajoint.com/core/datajoint-python/latest/#welcome-to-datajoint-for-python
description = "DataJoint for Python is a framework for scientific workflow management based on relational principles. DataJoint is built on the foundation of the relational data model and prescribes a consistent method for organizing, populating, computing, and querying data."
readme = "README.md"
license = {file = "LICENSE.txt"}
keywords = [
    "database",
    "automated",
    "automation",
    "compute",
    "data",
    "pipeline",
    "workflow",
    "scientific",
    "science",
    "research",
    "neuroscience",
    "bioinformatics",
    "bio-informatics",
    "datajoint",
]
# https://pypi.org/classifiers/
classifiers = [
  "Programming Language :: Python",
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Healthcare Industry",
  "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://docs.datajoint.com/"
Documentation = "https://docs.datajoint.com/"
Repository = "https://github.com/datajoint/datajoint-python"
"Bug Tracker" = "https://github.com/datajoint/datajoint-python/issues"
"Release Notes" = "https://github.com/datajoint/datajoint-python/releases"

[project.entry-points."console_scripts"]
dj = "datajoint.cli:cli"
datajoint = "datajoint.cli:cli"

[dependency-groups]
test = [
  "pytest",
  "pytest-cov",
  "pytest-env",
  "docker",
  "requests",
  "graphviz"
]

[project.optional-dependencies]
dev = [
  "pre-commit",
  "ruff",
  "codespell",
  # including test
  "pytest",
  "pytest-cov",
]

[tool.ruff]
# Equivalent to flake8 configuration
line-length = 127
target-version = "py39"

[tool.ruff.lint]
# Enable specific rule sets equivalent to flake8 configuration
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "C90", # mccabe complexity
]

# Ignore specific rules (equivalent to flake8 --ignore)
ignore = [
    "E203",  # whitespace before ':'
    "E722",  # bare except
]

# Per-file ignores (equivalent to flake8 --per-file-ignores)
[tool.ruff.lint.per-file-ignores]
"datajoint/diagram.py" = ["C901"]  # function too complex
"tests/test_blob_matlab.py" = ["E501"]  # SQL hex strings cannot be broken across lines

[tool.ruff.lint.mccabe]
# Maximum complexity (equivalent to flake8 --max-complexity)
max-complexity = 62

[tool.ruff.format]
# Use black-compatible formatting
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.setuptools]
packages = ["datajoint"]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = { attr = "datajoint.version.__version__"}

[tool.codespell]
skip = ".git,*.pdf,*.svg,*.csv,*.ipynb,*.drawio"
# Rever -- nobody knows
# numer -- numerator variable
# astroid -- Python library name (not "asteroid")
ignore-words-list = "rever,numer,astroid"

[tool.pytest_env]
# Default values - pytest fixtures will override with actual container details
DJ_USER="root"
DJ_PASS="password"
DJ_TEST_USER="datajoint"
DJ_TEST_PASSWORD="datajoint"
S3_ACCESS_KEY="datajoint"
S3_SECRET_KEY="datajoint"
S3_BUCKET="datajoint.test"
PYTHON_USER="dja"
JUPYTER_PASSWORD="datajoint"


[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "linux-aarch64"]

[tool.pixi.pypi-dependencies]
datajoint = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }
test = { features = ["test"], solve-group = "default" }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = ">=3.9,<3.14"
graphviz = ">=13.1.2,<14"

[tool.pixi.activation]
scripts=["activate.sh"]